Oxford - Update schedule

--- a/_data/2022/oxford/participants.yml
+++ b/_data/2022/oxford/participants.yml
@@ -54,7 +54,7 @@
   website: https://twitter.com/mgultzow
   
 - name: Solhee Han
-  image: 
+  image: /assets/images/han_solhee.jpg
   bio: "Solhee Han is a PhD student in Social Policy at University of Oxford. She conducts comparative studies on welfare state financing and redistribution and public attitudes towards the welfare state in the context of tax-benefit trade-offs. Previously, she worked at think-tanks on design and evaluation of income security policies."
   website: https://twitter.com/solhee_han
   
