--- a/_data/2022/oxford/schedule.yml
+++ b/_data/2022/oxford/schedule.yml
@@ -29,10 +29,11 @@
   events:
     - name: "09:30-10:45 Workshop Ridhi Kashyap: Digital Trace Data"
     - name: "10:45-11:15 Coffee Break"
-    - name: "11:15-12:30 Workshop Tobias Rüttenauer: Geospatial Analysis"
+    - name: "11:15-12:30 Workshop Douglas Leasure: Monitoring population displacement in Ukraine through social media activity"
     - name: "12:30-14:00 Lunch at Nuffield College"
-    - name: "14:00-16:00 Group Exercise: Tobias and Ridhi"
-    - name: "16:00-18:00 Research Talk Douglas Leasure: Digital Trace Data and Migration"
+    - name: "14:00-15:15 Workshop Tobias Rüttenauer: Geospatial Data"
+    - name: "15:15-16:45 Group exercise: Ridhi and Tobi"
+    - name: "17:00-18:00 Research Talk Douglas Leasure: Geospatial methods to estimate populations for census support"
 
 - date: July 7, 2022
   name: "Non-Random Probability Sampling and Post-Stratification"
