--- a/_data/2022/oxford/schedule.yml
+++ b/_data/2022/oxford/schedule.yml
@@ -6,7 +6,8 @@
 - date: July 4, 2022
   name: "Open Science"
   events:
-    - name: "09:30-10:00 Coffee and Arrivals"
+    - name: "09:30-09:45 Coffee and Arrivals"
+    - name: "09:45-10:00 Ridhi Kashyap: Welcome"
     - name: "10:00-11:30 Research Talk: Ben Goldacre"
     - name: "11:30-12:30 Workshop Cassandra Gould Van Praag: An Introduction to Version Control"
     - name: "12:30-14:00 Lunch at Nuffield College"
