--- a/_data/2022/covenant-university/participants.yml
+++ b/_data/2022/covenant-university/participants.yml
@@ -24,7 +24,7 @@
   website: https://twitter.com/SmallJosePhD
   
 - name: Michael Ehinmowo
-  image: /assets/images/
+  image: /assets/images/Mic.jpg
   bio: "<p align='justify'>Michael Ehinmowo is a master's student in the department of psychology at the University of Ibadan. His current research interest is at the nexus of mental health, collective behaviour, bioethics, and social policy. He is interested in employing emerging tools of computation in science.</p>"
   
 - name: Victoria Okafor
@@ -56,7 +56,7 @@
   website: https://www.linkedin.com/in/augustine-ogbaji-otobi-166756103
   
 - name: Ridwan Shittu
-  image: /assets/images/RShittu.jpg
+  image: /assets/images/Ridwan.jpg
   bio: "<p align='justify'>Ridwan Shittu is a Master’s student in Medical Demography at the University of Ibadan in Nigeria and the founder of IgnitePeak Advanced Professional Consult. He is interested in exploring how big data and computational demographic techniques can be used to advance the study of behavioural and health inequality. His thesis work explores the pattern and rural-urban differential of maternal health care practice and childhood respiratory infection symptoms. Ridwan holds a Bachelor’s Degree in Demography and Social Statistics from Federal University Oye-Ekiti, Nigeria.</p>"
   website: https://www.linkedin.com/in/olusola-r-shittu-b863541bb
 
