--- a/_data/2022/lisbon/schedule.yml
+++ b/_data/2022/lisbon/schedule.yml
@@ -103,12 +103,12 @@
     - name: "1:15 - 1:30 Lightning talk by participant (encouraged)"
     - name: "1:30 - 3:45 Work on group projects"
     - name: "3:45 - 4:00 Group Debrief (join research teams)"
-    - name: "4:00 - 5:00 Social Hour (optional) guest: Bernardo Costa, PhD student at Nova SBE, SICSS-Lisbon 2021 alumnus"
-    - name: "7:00 - 9:00pm Farewell Dinner (Location TBD)"
+    - name: "4:00 - 5:00 Social Hour (optional) guest: Maximilian Kaiser, PhD student at Frankfurt School of Finance and Management"
+    - name: "7:00 - 9:00pm Farewell Dinner (Location: Bairrices)"
  
 - date: 2022-06-29
   name: Work on group projects
   events:
-    - name: "3:00 - 4:00pm Research teams presentation and discussion (subject to change if participants need to leave at the same day"
-    - name: "4:00 - 5:00 Social Hour"
+    - name: "3:00 - 4:00pm Research teams presentation and discussion"
+    - name: "4:00 - 5:00 Social Hour (optional) guest: Bernardo Costa, PhD student at Nova SBE, SICSS-Lisbon 2021 alumnus"
     
