--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -293,7 +293,7 @@
     - name: "Mathematica TAs are Available via Email/Zoom for Consultation Starting on Tuesday"
     - name: "[Participant Zoom Links](https://docs.google.com/document/d/1wPr0rmHvjjIJ7K8sv6IytATEH7fv6d99C-ovZurApqw/edit?usp=sharing)"
     - name: "9:30 - 10:00 Logistics (*Zoom*) [(video)](https://youtu.be/-xy8cHfvB58)"
-    - name: '10:00 - 11:30 SICSS-Africa + African Descendants Inaugural Panel: "Interrogating Data Collection Methods Focused on African and African Descendants: Challenges and Opportunities” [(Poster)](https://drive.google.com/file/d/1lGozCPxZIR-HLLTFDFluwYdobf4KoQhH/view) [(LIVE Q&A - Webex)](https://mathematicaevents.webex.com/mathematicaevents/j.php?RGID=r0bc365c7a126bf134ef83e355e6b4369)
+    - name: '10:00 - 11:30 SICSS-Africa + African Descendants Inaugural Panel: "Interrogating Data Collection Methods Focused on African and African Descendants: Challenges and Opportunities” [(Poster)](https://drive.google.com/file/d/1lGozCPxZIR-HLLTFDFluwYdobf4KoQhH/view) [(LIVE Q&A)](https://youtu.be/YZUr-z9LV_c)
       
       
         **Speakers**
@@ -336,7 +336,7 @@
   events:
     - name: "Mathematica TAs are Available via Email/Zoom for Consultation (please see [SCHEDULE](https://docs.google.com/spreadsheets/d/1BbbPwVYmfHAT0vi2O_3kApd8aBKFcx0ishDXTHVNUo0/edit#gid=0))"
     - name: "[Participant Zoom Links](https://docs.google.com/document/d/1wPr0rmHvjjIJ7K8sv6IytATEH7fv6d99C-ovZurApqw/edit?usp=sharing)"
-    - name: "9:30 - 10:00 Logistics (*Zoom*)"
+    - name: "9:30 - 10:00 Logistics (*Zoom*) [(video)](https://youtu.be/A7Fh_8CF1QA)"
     - name: "10:00 - 12:00 Work on Group Projects (*Zoom*)"
     - name: '12:00 - 1:00 New Frontiers in Research and Technology: "The Future of Research and Equity in the Metaverse" Panel [(LIVE Q&A - Webex)](https://mathematicaevents.webex.com/mathematicaevents/j.php?RGID=r0f13d45c103df0b3c25939792dcddacf)
         
@@ -360,7 +360,7 @@
 
         
     - name: "1:00 - 4:00 Work on Group Projects (*Zoom*)"
-    - name: '4:00 - 5:30 Featured Presentation #2: "Data Conscience: Algorithmic Siege on Our Humanity" [(video)](https://youtu.be/kTDYFMXAuNM) - LIVE Session to Include Q&A and Office Hours [(slides)](https://drive.google.com/file/d/1Zc2CtECfPOP9kujbVfxSfRlXJBnI5jde/view?ts=62a6327b) (*Zoom*) (LIVE Q&A)
+    - name: '4:00 - 5:30 Featured Presentation #2: "Data Conscience: Algorithmic Siege on Our Humanity" [(video)](https://youtu.be/kTDYFMXAuNM) - LIVE Session to Include Q&A and Office Hours [(recommended podcasts)](https://docs.google.com/document/d/1aUp5r1JeNEtnxn-NyfmGraGh1hYI9E9tLdTnS-0RAiI/edit) [(slides)](https://drive.google.com/file/d/1Zc2CtECfPOP9kujbVfxSfRlXJBnI5jde/view?ts=62a6327b) (*Zoom*) [(LIVE Q&A)](https://youtu.be/o4pphV-bToY)
     
         - [Brandeis Marshall, Ph.D.](https://www.brandeismarshall.com/), Chief Executive Officer, DataedX Group & Professor, Computer Science, Spelman College (on sabbatical leave)'
     
@@ -377,7 +377,7 @@
         - [Lisa García Bedolla, Ph.D.](https://gse.berkeley.edu/lisa-garc%C3%ADa-bedolla), Vice Provost, Graduate Studies, Dean of the Graduate Division, & Professor, Graduate School of Education, University of California, Berkeley"  
         
     - name: "1:00 - 4:00 Work on Group Projects (*Zoom*)"
-    - name: '4:00 - 5:30 Featured Presentation #3: "Using Uncommon Data to Understand Society and its People" [(video)](https://youtu.be/EGxZaL3VRpM) - LIVE Session to Include Q&A and Office Hours [(slides)](https://docs.google.com/presentation/d/1R4f-nZbU5ZMBJOMRJn9oYIQZrizOb2VxoeYxyrMBZDE/edit?usp=sharing) (*Zoom*) (LIVE Q&A)
+    - name: '4:00 - 5:30 Featured Presentation #3: "Using Data to Customize the 3D Audio Experience" [(video)](https://youtu.be/EGxZaL3VRpM) - LIVE Session to Include Q&A and Office Hours [(slides)](https://docs.google.com/presentation/d/1R4f-nZbU5ZMBJOMRJn9oYIQZrizOb2VxoeYxyrMBZDE/edit?usp=sharing) (*Zoom*) (LIVE Q&A)
 
         - [Kyla McMullen, Ph.D.](http://kylamcmullen.com/), Associate Professor, Computer Science, University of Florida'
 
@@ -393,7 +393,7 @@
     
         **Speakers**
     
-          - [Alex Bohl, Ph.D.](https://mathematica.org/staff/alex-bohl?adlt=strict&toWww=1&redig=1070AD99D46C47FBAD78180C33DFEF99), Principle Data Scientist, Mathematica [(video)](https://youtu.be/4iRvVeyFAbs)
+          - [Alex Bohl, Ph.D.](https://mathematica.org/staff/alex-bohl?adlt=strict&toWww=1&redig=1070AD99D46C47FBAD78180C33DFEF99), Principal Data Scientist, Mathematica [(video)](https://youtu.be/4iRvVeyFAbs)
         
           - [Sheldon Bond](https://www.linkedin.com/in/sheldonbond), Senior Program Lead, Mathematica [(video)](https://youtu.be/fbMfli1TdB4)
         
@@ -403,7 +403,7 @@
           
         **Moderator**
         
-          - [Esteban J. Quiñones, Ph.D.](https://mathematica.org/staff/esteban-quinones), Researcher, Development Economist, International Division, Mathematica"
+          - [Esteban J. Quiñones, Ph.D.](https://mathematica.org/staff/esteban-quinones), Researcher, Mathematica"
         
     - name: "11:30 - 12:00 Work on Group Projects (*Zoom*)"
     - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #7: Africa Center for Strategic Studies [(slides)](https://docs.google.com/presentation/d/1MAazFDFwORUbBSjcK8pwszsJr60V1FfV/edit?usp=sharing&ouid=112934598660812456864&rtpof=true&sd=true) (*Zoom*) [(video)](https://youtu.be/MpYlsOicYD0) (LIVE Q&A)
@@ -427,8 +427,9 @@
         - [Safiya Noble, Ph.D.](https://safiyaunoble.com/), MacArthur Foundation Fellow & Professor, Gender Studies and African American Studies, University of California, Los Angeles"
     
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 12:20 Overview of Group and Individual Project Presentations (*Zoom*)"
-    - name: "12:20 - 4:00 Group and Individual Project Presentations (*Zoom*)"
+    - name: "12:00 - 1:00 Work on Group Projects (*Zoom*)"
+    - name: "1:00 - 1:20 Overview of Group and Individual Project Presentations (*Zoom*)"
+    - name: "1:20 - 4:00 Group and Individual Project Presentations (*Zoom*)"
     - name: "4:00 - 5:00 Closing Plenary and Q&A, Mathematica (*Zoom*) (video)
     
         - [LaVerne H. Council](https://www.mathematica.org/news/laverne-h-council-appointed-to-mathematicas-board-of-directors ), Founder and Chief Executive Officer, Emerald One, LLC"
