--- a/_data/2022/singapore/participants.yml
+++ b/_data/2022/singapore/participants.yml
@@ -45,6 +45,7 @@
   bio: "Nathanael Sumaktoyo is an Assistant Professor of Political Science at the National University of Singapore. He previously did postdoctoral fellowships at the University of Konstanz, Germany and the University of Notre Dame, USA. His research is on identity politics, political behavior, and political psychology. Methodologically, he is interested in experimental methods, causal inference, Bayesian analysis, and computational methods."
 
 - name: Pey Wen Liaw
+  image: /assets/images/pey-wen-sg.jpg
   bio: "Liaw Pey Wen is a Ph.D Student at the Department of Malay Studies, National University of Singapore. Her research investigates the Malay monarchy's utilization of digital media as its survival strategies. She receives her MA in Communication from National Chengchi University in Taiwan. She is recognised for in-depth writing about human-interest stories. She is also a member of Freedom Film Network."
 
 - name: Rakoon Piyanontalee
