--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -180,7 +180,7 @@
     - name: "3:15 - 3:45 Debrief and Logistics (*Zoom*) [(video)](https://youtu.be/XnldnJuyvxo)"
     - name: "3:45 - 4:15 Introduction to New SICSS-Howard/Mathematica Site Project [(Introduction to Crown Act)](https://youtu.be/2lHG16J2GXU) (Natural Hair Stories: [Nicole Jenkins Ph.D.](https://youtu.be/z2o5Wk2GAKo); [Naniette Coleman](https://youtu.be/JOOci-H6dII)) [(video)](https://youtu.be/ciwcXLojLPw)"
     - name: "4:15 - 4:30 Break"
-    - name: "4:30 - 5:30 SICSS-Howard/Mathematica Kick-off and Opening Plenary: An Intimate Fireside Chat and LIVE Q&A (*Zoom*) (video)
+    - name: "4:30 - 5:30 SICSS-Howard/Mathematica Kick-off and Opening Plenary: An Intimate Fireside Chat and LIVE Q&A (*Zoom*) [(video)](https://youtu.be/5l1_Z-j9Y64)
     
         - [Anthony K. Wutoh, Ph.D., R.Ph.](https://provost.howard.edu/about/administration#:~:text=D.%2C%20R.Ph.,and%20the%20Center%20of%20Excellencew), Provost, Howard University
         
@@ -275,7 +275,7 @@
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:00 Group Exercise Continuation: SICSS-H/M Mass Collaboration Activity (*Zoom*) [(video)](https://youtu.be/H1eRucvTfNg) OR Content-Specific Office Hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "3:00 - 3:15 Break"
-    - name: "3:15 - 3:45 Group Exercise Debrief and Logistics (*Zoom*)"
+    - name: "3:15 - 3:45 Group Exercise Debrief and Logistics (*Zoom*) [(video)](https://youtu.be/YwqrWGiiry4)"
     - name: "3:45 - 5:30 Data Assurance"
 
 
@@ -372,12 +372,12 @@
     - name: "[Participant Zoom Links](https://docs.google.com/document/d/1wPr0rmHvjjIJ7K8sv6IytATEH7fv6d99C-ovZurApqw/edit?usp=sharing)"
     - name: "9:30 - 10:00 Logistics (*Zoom*)"
     - name: "10:00 - 12:00 Work on Group Projects (*Zoom*)"
-    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #6: Campus-Wide Institutional Survey Research and Data Collection (Graduate Division, University of California, Berkeley) (*Zoom*) [(video)](https://youtu.be/tJCiuUxKe1Y) (LIVE Q&A)
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #6: Campus-Wide Institutional Survey Research and Data Collection (Graduate Division, University of California, Berkeley) (*Zoom*) [(video)](https://youtu.be/tJCiuUxKe1Y) [(LIVE Q&A)](https://youtu.be/YkcYmQ8FCG4)
     
         - [Lisa García Bedolla, Ph.D.](https://gse.berkeley.edu/lisa-garc%C3%ADa-bedolla), Vice Provost, Graduate Studies, Dean of the Graduate Division, & Professor, Graduate School of Education, University of California, Berkeley"  
         
     - name: "1:00 - 4:00 Work on Group Projects (*Zoom*)"
-    - name: '4:00 - 5:30 Featured Presentation #3: "Using Data to Customize the 3D Audio Experience" [(video)](https://youtu.be/EGxZaL3VRpM) - LIVE Session to Include Q&A and Office Hours [(slides)](https://docs.google.com/presentation/d/1R4f-nZbU5ZMBJOMRJn9oYIQZrizOb2VxoeYxyrMBZDE/edit?usp=sharing) (*Zoom*) (LIVE Q&A)
+    - name: '4:00 - 5:30 Featured Presentation #3: "Using Data to Customize the 3D Audio Experience" [(video)](https://youtu.be/EGxZaL3VRpM) - LIVE Session to Include Q&A and Office Hours [(slides)](https://docs.google.com/presentation/d/1R4f-nZbU5ZMBJOMRJn9oYIQZrizOb2VxoeYxyrMBZDE/edit?usp=sharing) (*Zoom*) [(LIVE Q&A)](https://youtu.be/Hyx1YWmp6MU)
 
         - [Kyla McMullen, Ph.D.](http://kylamcmullen.com/), Associate Professor, Computer Science, University of Florida'
 
@@ -432,7 +432,7 @@
     - name: "1:20 - 4:00 Group and Individual Project Presentations (*Zoom*)"
     - name: "4:00 - 5:00 Closing Plenary and Q&A, Mathematica (*Zoom*) (video)
     
-        - [LaVerne H. Council](https://www.mathematica.org/news/laverne-h-council-appointed-to-mathematicas-board-of-directors ), Founder and Chief Executive Officer, Emerald One, LLC"
+        - [LaVerne H. Council, MBA, DBA](https://www.emeraldone.com/about-us), Founder and Chief Executive Officer, Emerald One, LLC"
         
     - name: "5:00 - 5:15 Break"
     - name: "5:15 - 5:45 SICSS-Howard/Mathematica Final Debrief and Conclusion (*Zoom*)"
