--- a/_data/2022/howard-mathematica/people.yml
+++ b/_data/2022/howard-mathematica/people.yml
@@ -53,9 +53,9 @@ closing:
   title: Closing Plenary Speaker 
   people:
     - name: LaVerne H. Council
-      image: /assets/images/LaVerne_Council.jpg
-      bio: "LaVerne H. Council is a founder and the chief executive officer of Emerald One, LLC and has held executive leadership positions with organizations such as Grant Thornton; Johnson & Johnson; Dell, Inc.; and Ernst & Young, LLC. In her role as the Assistant Secretary for the Office of Information and Technology and Chief Information Officer at the Department of Veterans Affairs, LaVerne not only led technology strategy, investment, and implementation for the largest civilian agency in the federal government, but also developed the most culturally diverse executive leadership team in the federal government."
-      website: https://www.mathematica.org/news/laverne-h-council-appointed-to-mathematicas-board-of-directors
+      image: /assets/images/LaVerne_Council.png
+      bio: 'LaVerne H. Council began her career as an "intrapreneur" over 35 years ago, developing a name as a transformational leader; focusing people over product, outcomes over activity. She is a global operations and information technology strategist and change agent, and her experience as a global executive provides her a unique perspective as an influencer, advisor, and coach. She is a founder and the Chief Executive Officer (CEO) of Emerald One and a member of the board of directors for ConMed, Mathematica, March of Dimes, Concentrix, and GirlUp. LaVerne’s work as a global executive leader with organizations like Grant Thornton, Johnson & Johnson; Dell, Inc.; and Ernst & Young, LLC give her a unique perspective on the opportunities and challenges faced by both CxO executives and their employees. In her role as the Assistant Secretary for the Office of Information and Technology and Chief Information Officer at the Department of Veterans Affairs, LaVerne not only created the technology strategy, investment, and implementation for the largest civilian agency in the federal government, she transformed the executive leadership team to the most culturally diverse in the federal government. LaVerne focuses on the health of an organization, the cohesion of the team, and the strength of the individual, weaving the professional path with personal development. A volunteer since the age of 5, LaVerne advises leaders and teams on servant leadership, spotlighting the unique gifts each person brings to the team and using oneself to improve the lives of others.'
+      website: https://www.emeraldone.com/about-us
 
 
 speakers: 
