--- a/_data/2022/delhi/schedule.yml
+++ b/_data/2022/delhi/schedule.yml
@@ -31,11 +31,11 @@
     - name: "11:30-1:00 Agent-based Modeling by Dr. Narges Hajimoladarvish"
     - name: "1:00-2:00 Lunch Break"
     - name: "2:00-3:30 Agent-based Modeling by Dr. Narges Hajimoladarvish"
-    - name: "3:30-5:00 Computational Text Analysis by Dr. Ritesh Kumar / Dr. Rishemjit Kaur"
+    - name: "3:30-5:00 Multilingual Text Analysis: A window into cultural dynamics by Dr. Ritesh Kumar / Dr. Rishemjit Kaur"
     
 - date: 2022-06-17
   events:
-    - name: "10:00-11:30 Computational Text Analysis by Dr. Ritesh Kumar / Dr. Rishemjit Kaur"
+    - name: "10:00-11:30 Tutorial On MultiLingual Sentiment Identification: Employing English and Hindi Tweets by Mr. Maneet Singh"
     - name: "11:30-1:00 Work on Group Projects by Participants"
     - name: "1:00-2:00 Lunch Break"
     - name: "2:00-3:30 Work on Group Project by Participants"
