--- a/_data/2022/delhi/participants.yml
+++ b/_data/2022/delhi/participants.yml
@@ -36,10 +36,6 @@
   bio: "Trisha Chaudhuri is a Program Officer/Data Scientist at Population Council, India. She has completed her Masters in Economics from University of Calcutta. Prior to working at the Council, Trisha was as an Assistant Manager at Genpact where she was introduced to data science and had developed predictive models for both US and UK insurance carriers. At the Council, Trisha has been actively working on handling and analyzing health data, both survey and administrative. She enjoys working with data, in finding innovative insights and in creating dashboards for visualization." 
   website: https://www.linkedin.com/in/trisha-chaudhuri-a00429109/
   
-- name: "Asif Ali Banka"
-  image: /assets/images/delhi_AsifBanka.jpg
-  bio: "Asif Ali Banka - a student turned academician is a Assistant Professor at Department of Computer Science and Engineering, IUST Kashmir, India. During his PhD he has worked in the area of Large Scale Graph Analytics for Communities and Information Diffusion in Social Networks. Asif is interested in exploring and integrating various aspects of computation, sociology and behavioural science. His research focuses on behavioural economics and social-economic problems related to healthcare." 
-
   
 - name: "Bhavye Jain"
   image: /assets/images/delhi_BhavyeJain.jpeg
@@ -100,11 +96,12 @@
   image: /assets/images/delhi_ManoranjanGhosh.JPG
   bio: "Manoranjan Ghosh, currently working as India Smart Cities Fellow (Fellowship of Ministry of Housing and Urban Affairs) at National Institute of Urban Affairs and hold a Ph.D. from the Indian Institute of Technology Kharagpur, India. He is a Climate Change Studies researcher at heart and by training and have expertise on spatial data analytics, machine learning tools, and PRA."
 
-- name: "Ankur Jain"
-  image: /assets/images/delhi_AnkurJain.png
-  bio: "Ankur Jain is a  Assistant Professor in Department of Business Administration, School of Business and Commerce at Manipal University Jaipur. He is a doctoral student at Jawaharlal Nehru University and his research interests  lies in area of Agriculture Economics, Development Economics and International Trade. Ankur holds MA in Economics from University of Hyderabad and BA Honours Economics from University of Delhi."
-  
 - name: "Pooja Sarin"
   image: /assets/images/delhi_PoojaSarin.jpg
   bio: "Pooja Sarin is a Data Science Researcher (Doctorate Research Scholar) at the Indian Institute of Technology Delhi, working in the space of applied machine learning for Social Media Challenges. She loves to explore and work with several use-cases and applications related to Big Data from the business/industry perspective, also keeping Sustainability, Innovation, and AI for Social Good in her mind. Before joining the Ph.D. program, she has worked as Research Associate and explored the domain of Big Data and its applications (Air Pollution & Computer Vision Applications) at IIT Delhi. She also has Research Experience as an M.Tech trainee at Central Scientific Instrumentation Organization (Council of Scientific and Industrial Research), Chandigarh, in the domain of Earthquake Data Analytics. She is B.Tech and M.Tech in Computer Science and Engineering."
   website: https://scholar.google.com/citations?hl=en&user=5zG33uQAAAAJ
+  
+  - name: "Ramit Das"
+  image: /assets/images/delhi_RamitDas.png
+  bio: "Ramit Das is a PhD Student @ The Institute of Mathematical, Sciences, Chennai. He works on ideas spanning across theoretical computer science, mathematical logic, formal game theory. He wants to explore the connections from theory to practise for ideas in Game Theory. The fascinating ideas of designing human systems that will be able last as long as a good software design truly occupy his mind. He also, just like most traditional Computer Science researchers, find ideas in complexity theory - p vs np problem, decentralised decision problem, fascinating and has this general love for puzzles and games!"
+  website: https://scholar.google.com/citations?hl=en&user=0bU2LDgAAAAJ
