--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -370,7 +370,7 @@
   events:
     - name: "Mathematica TAs are Available via Email/Zoom for Consultation (please see [SCHEDULE](https://docs.google.com/spreadsheets/d/1BbbPwVYmfHAT0vi2O_3kApd8aBKFcx0ishDXTHVNUo0/edit#gid=0))"
     - name: "[Participant Zoom Links](https://docs.google.com/document/d/1wPr0rmHvjjIJ7K8sv6IytATEH7fv6d99C-ovZurApqw/edit?usp=sharing)"
-    - name: "9:30 - 10:00 Logistics (*Zoom*)"
+    - name: "9:30 - 10:00 Logistics (*Zoom*) [(video)](https://youtu.be/VtXmeMzTkRI)"
     - name: "10:00 - 12:00 Work on Group Projects (*Zoom*)"
     - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #6: Campus-Wide Institutional Survey Research and Data Collection (Graduate Division, University of California, Berkeley) (*Zoom*) [(video)](https://youtu.be/tJCiuUxKe1Y) [(LIVE Q&A)](https://youtu.be/YkcYmQ8FCG4)
     
@@ -387,7 +387,7 @@
   events:
     - name: "Mathematica TAs are Available via Email/Zoom for Consultation (please see [SCHEDULE](https://docs.google.com/spreadsheets/d/1BbbPwVYmfHAT0vi2O_3kApd8aBKFcx0ishDXTHVNUo0/edit#gid=0))"
     - name: "[Participant Zoom Links](https://docs.google.com/document/d/1wPr0rmHvjjIJ7K8sv6IytATEH7fv6d99C-ovZurApqw/edit?usp=sharing)"
-    - name: "9:30 - 10:00 Logistics (*Zoom*)"
+    - name: "9:30 - 10:00 Logistics (*Zoom*) [(video)](https://youtu.be/fxYnTrUCPsk)"
     - name: "10:00 - 11:30 Mathematica Roundtable (*Zoom*) (LIVE Q&A)
     
     
@@ -406,12 +406,12 @@
           - [Esteban J. Quiñones, Ph.D.](https://mathematica.org/staff/esteban-quinones), Researcher, Mathematica"
         
     - name: "11:30 - 12:00 Work on Group Projects (*Zoom*)"
-    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #7: Africa Center for Strategic Studies [(slides)](https://docs.google.com/presentation/d/1MAazFDFwORUbBSjcK8pwszsJr60V1FfV/edit?usp=sharing&ouid=112934598660812456864&rtpof=true&sd=true) (*Zoom*) [(video)](https://youtu.be/MpYlsOicYD0) (LIVE Q&A)
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #7: Africa Center for Strategic Studies [(slides)](https://docs.google.com/presentation/d/1MAazFDFwORUbBSjcK8pwszsJr60V1FfV/edit?usp=sharing&ouid=112934598660812456864&rtpof=true&sd=true) (*Zoom*) [(video)](https://youtu.be/MpYlsOicYD0) [(LIVE Q&A)](https://youtu.be/-1rMSJmHcJs)
         
         - [Mark Duerksen, Ph.D.](https://africacenter.org/experts/dr-mark-duerksen/), Research Associate, Africa Center for Strategic Studies" 
         
     - name: "1:00 - 4:00 Work on Group Projects (*Zoom*)"
-    - name: '4:00 - 5:30 Featured Presentation #4: "Data Science for Marketing" [(video)](https://youtu.be/1VQo-ye1MS0) - LIVE Session to Include Q&A and Office Hours (*Zoom*) (LIVE Q&A)
+    - name: '4:00 - 5:30 Featured Presentation #4: "Data Science for Marketing" [(video)](https://youtu.be/1VQo-ye1MS0) - LIVE Session to Include Q&A and Office Hours (*Zoom*) [(LIVE Q&A)](https://youtu.be/Njfhq7s96Zc)
     
         - [Shawndra Hill, Ph.D.](https://www8.gsb.columbia.edu/cbs-directory/detail/sbh2146), Senior Lecturer, Marketing, Columbia Business School'
 
@@ -428,7 +428,7 @@
     
     - name: "11:30 - 12:00 Break"
     - name: "12:00 - 1:00 Work on Group Projects (*Zoom*)"
-    - name: "1:00 - 1:20 Overview of Group and Individual Project Presentations (*Zoom*)"
+    - name: "1:00 - 1:20 Overview of Group and Individual Project Presentations (*Zoom*) (video) & Surprise LIVE Midday Motivation Safiya Noble, Ph.D. (*Zoom*) (video)"
     - name: "1:20 - 4:00 Group and Individual Project Presentations (*Zoom*)"
     - name: "4:00 - 5:00 Closing Plenary and Q&A, Mathematica (*Zoom*) (video)
     
