--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -421,14 +421,14 @@
   events:
     - name: "Mathematica TAs are Available via Email/Zoom for Consultation (please see [SCHEDULE](https://docs.google.com/spreadsheets/d/1BbbPwVYmfHAT0vi2O_3kApd8aBKFcx0ishDXTHVNUo0/edit#gid=0))"
     - name: "[Participant Zoom Links](https://docs.google.com/document/d/1wPr0rmHvjjIJ7K8sv6IytATEH7fv6d99C-ovZurApqw/edit?usp=sharing)"
-    - name: "9:30 - 10:00 Logistics (*Zoom*)"
+    - name: "9:30 - 10:00 Logistics (*Zoom*) [(video)](https://youtu.be/ZNh9CpuLFcw)"
     - name: "10:00 - 11:30 SICSS-Howard/Mathematica 2022 Keynote Address (*Zoom*) [(video)](https://youtu.be/LnVkR9CjbW8)
     
         - [Safiya Noble, Ph.D.](https://safiyaunoble.com/), MacArthur Foundation Fellow & Professor, Gender Studies and African American Studies, University of California, Los Angeles"
     
     - name: "11:30 - 12:00 Break"
     - name: "12:00 - 1:00 Work on Group Projects (*Zoom*)"
-    - name: "1:00 - 1:20 Overview of Group and Individual Project Presentations (*Zoom*) (video) & Surprise LIVE Midday Motivation Safiya Noble, Ph.D. (*Zoom*) (video)"
+    - name: "1:00 - 1:20 Overview of Group and Individual Project Presentations (*Zoom*) [(video)](https://youtu.be/AhDxHjI_y20) & Surprise LIVE Midday Motivation Safiya Noble, Ph.D. (*Zoom*) (video)"
     - name: "1:20 - 4:00 Group and Individual Project Presentations (*Zoom*)"
     - name: "4:00 - 5:00 Closing Plenary and Q&A, Mathematica (*Zoom*) (video)
     
