jias: update schedule

--- a/_data/2022/jias/schedule.yml
+++ b/_data/2022/jias/schedule.yml
@@ -235,9 +235,8 @@
     - name: "08:00 - 12:30 Paticipants arrive at Accomodation"
     - name: "13:00 - 14:00 Lunch"
     - name: "14:00 - 16:15 Welcome and Logistics, JIAS Campus Tour, Group Work"
-    - name: "17:30 - 18:30 Meet and Greet with Siphamandla Zondi (IPATC, University of
-      Johannesburg)"
-    - name: "19:00 - 21:00 Reception Dinner"
+    - name: "17:00 - 18:00 Fireside chat with Chris Bail (SICSS Director)"
+    - name: "18:00 - 20:00 Meet and greet dinner with Siphamandla Zondi (IPATC, University of Johannesburg)"
 
 - date: Tuesday, 5 July 2022
   events:
